Added the Show page for a BlogPost, and implemented the API for it.
