# _project/api/_src/services/DBContext/BlogPostRepo.ts
@@ -1,8 +1,8 @@
-import type { BlogPost } from "@effect-app-boilerplate/models/Blog"
-import { RepoLive } from "api/migrate.js"
+import type { BlogPost, BlogPostId } from "@effect-app-boilerplate/models/Blog"
 
 export interface BlogPostRepo {
   all: Effect<never, never, readonly BlogPost[]>
+  find: (id: BlogPostId) => Effect<never, never, Option<BlogPost>>
   save: (post: BlogPost) => Effect<never, never, void>
 }
 export const BlogPostRepo = Tag<BlogPostRepo>()
@@ -13,7 +13,7 @@ export const BlogPostRepoLive = Layer
 
     return {
       all: Effect.sync(() => [...items]),
-      save: (post) => Effect.sync(() => (items.push(post)))
+      find: (id) => Effect.sync(() => items.findFirst((_) => _.id === id)),
+      save: (post) => Effect.sync(() => items.push(post))
     }
   })
-  .provide(RepoLive)
